--- a/data/config/widgets.toml
+++ b/data/config/widgets.toml
@@ -1,7 +1,7 @@
 # About Widget config
 [about]
 title = "Daniel Baggett"                            # default: .Site.Title
-description = "This is the about description"                      # default: .Site.Params.info.description
+description = " "                      # default: .Site.Params.info.description
 logo = "/images/logo.png"             # default: "/images/logo.png"
 
 # Breadcrumbs Widget config
