--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://danbaggett.netlify.com/"
-title = ""
+title = " "
 # for smart copyright line, leave this blank and check [params.copyright]
-copyright = "Here is where I see if it is live editing"
+copyright = " "
 
 theme = "minimo"
 
@@ -24,7 +24,7 @@ enableEmoji = true
 defaultContentLanguage = "en"
 
 [params.info]
-description = ""
+description = "Is the"
 title404 = "Nothing's here!"
 
 [params.assets]
@@ -49,7 +49,7 @@ hideEntryMeta = ["page"] # boolean / array of sections
 showReadingTime = true
 showLastmod = true
 taxonomyCloudShuffle = false
-accentColor = "#ffcd00"
+accentColor = "#00ffd5"
 hideMainMenu = false
 rtl = false
 
