--- a/data/config/widgets.toml
+++ b/data/config/widgets.toml
@@ -11,7 +11,7 @@ excludeParents = ["page"]            # default: ["page"]
 
 # Recent Posts Widget config
 [recent_posts]
-title = ""                            # default: "Recent Posts"
+title = "Recent Posts"                            # default: "Recent Posts"
 length = 3                            # default: 5
 excludeTypes = ["page"]               # default: ["page"]
 
@@ -21,7 +21,7 @@ title = "Search"                      # default: "Search"
 
 # Sidebar Menu Widget config
 [sidebar_menu]
-title = ""                            # default: ""
+title = "What "                            # default: ""
 mirror = ""                           # default: ""
 
 # Social Menu Widget config
