--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://danbaggett.netlify.com/"
 title = " "
 # for smart copyright line, leave this blank and check [params.copyright]
-copyright = " "
+copyright = "Powered By Hugo & Blogdown - Theme Minimo "
 
 theme = "minimo"
 
@@ -76,7 +76,7 @@ titleSeparator = "•"
 
 [params.social]
 #codepen = "DanielBaggett"
-#email = "danielrbaggett@gmail.com"
+email = "dbaggett@irsc.edu"
 #facebook = "MunifTanjim"
 github = "danbaggett"
 #gitlab = "MunifTanjim"
